# django-windowsauth

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  django.yml  publish_ldap_server.yml
docs/source/: conf.py  index.rst
docs/source/howto/: collect_metrics.rst  create_tasks.rst  custom_error_pages.rst  custom_user_fields.rst  debug_toolbar.rst  manage_secrets.rst  securing_ldap.rst  serve_static.rst  using_ldap_manager.rst
docs/source/installation/: installation.rst  logging.rst  migration.rst  publish.rst  quick_start.rst
docs/source/reference/: auth_backend.rst  change_log.rst  checks.rst  decorators.rst  ldap_settings.rst  management_commands.rst  middleware.rst  models.rst  settings_reference.rst  signals.rst
ldap_server/ldif/: init.ldif
testproj/: requirements.txt  web.config
testproj/demo/: forms.py  middleware.py  tests.py  urls.py  views.py
testproj/demo/templates/: base.html
testproj/demo/templates/demo/: computers.html  index.html
testproj/ldap_server/: Dockerfile
testproj/ldap_server/bootstrap/schema/custom/: microsoftattributetype.schema  microsoftobjectclass.schema
testproj/ldap_server/environment/: my-env.startup.yaml  my-env.yaml
testproj/static/: web.config
testproj/testproj/: settings.py  urls.py
windows_auth/: __init__.py  admin.py  apps.py  backends.py  checks.py  conf.py  decorators.py  ldap.py  middleware.py  models.py  panels.py  predefined_tasks.py  scheduler.py  settings.py  signals.py  utils.py
windows_auth/ldap_metrics/: __init__.py  admin.py  apps.py  models.py  utils.py
windows_auth/ldap_metrics/migrations/: 0001_initial.py
windows_auth/management/commands/: createtask.py  createwebconfig.py
windows_auth/migrations/: 0001_initial.py  0002_auto_20201205_2300.py
windows_auth/templates/windows_auth/: modify_details.html  modify_entry.html  panel.html  search_details.html  search_entry.html
windows_auth/templates/windows_auth/iis_configs/: root.config  serve.config
windows_auth/templates/windows_auth/panel/: details_base.html  entry_base.html  modify_details.html  modify_entry.html  panel.html  search_details.html  search_entry.html
windows_auth/templatetags/: ldap_utils.py
