[metadata]
name = django-windowsauth
version = 0.1
description = Django integration into IIS with Windows Authentication made easy.
long_description = file: README.md
url = https://github.com/danyi1212/django-windowsauth
author = Dan Yishai
author_email = danyi1212@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=2.2
    wfastcgi>=3.0.0
    ldap3>=2.8.1