[metadata]
name = django-windowsauth
version = 1.3.2
description = Easy integration and deployment of Django projects into Windows Environments.
long_description = file: README.rst
url = https://github.com/danyi1212/django-windowsauth
author = Dan Yishai
author_email = danyi1212@gmail.com
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Environment :: Win32 (MS Windows)
    Natural Language :: English
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration :: Authentication/Directory
    Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP
    Topic :: Documentation
    Topic :: Documentation :: Sphinx

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=2.2
    wfastcgi>=3.0.0
    ldap3>=2.8.1